bootstrap/apptrees/mimic/apps/leaf/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leaf
spec:
  selector:
    app: leaf
  ports:
    - name: http
      port: 80
      targetPort: 5678
